# dot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  _dot  appveyor.yml  build.rs  ci_build.sh  ci_deploy.bat  ci_deploy.sh  ci_install.sh  dotconfig.toml  make_android_pkg.sh  memo.txt  rust-toolchain.toml  rustfmt.toml  wercker.yml
.github/workflows/: build.yml  workflow.yml
ci/: before_deploy.ps1  before_deploy.sh  build.sh  cargo.sh  deploy.ps1  deploy.sh  get-tagorbranch.ps1  install.sh  make_package.bat  make_package.sh  publish.sh  script.sh  setup_msys2.ps1
ci/rust-android-builder/: Dockerfile
completions/: _dot  dot.bash-completion  dot.fish
examples/: dotconfig.toml  dotlink-linux.toml  dotlink-windows.toml  dotlink.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
scripts/: bootstrap.sh
src/: app.rs  cli.rs  config.rs  dotfiles.rs  entry.rs  lib.rs  main.rs  privilege.rs  util.rs  windows.rs
templates/: mappings-example.toml
tests/dotfiles/: .mappings
zsh/: _dot
